migration complete. also created a better directory and build structure. user apps should now mainly link to the ui library

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,3 +1,20 @@
+set(ROOT_DICT_HEADERS
+fit/ModelFitResult.h
+fit/EstimatorOptions.h
+fit/PndLmdFitOptions.h
+fit/PndLmdFitStorage.h
+data/PndLmdFitDataBundle.h
+data/PndLmdAbstractData.h
+data/PndLmdHistogramData.h
+data/PndLmdAngularData.h
+data/PndLmdAcceptance.h
+LumiFitStructs.h
+)
+
+set(LINKDEF LinkDef.h)
+
+execute_process(COMMAND rootcint -f LmdFitDataDict.cxx -c -I$ENV{MODEL_FRAMEWORK}/include -I${CMAKE_SOURCE_DIR} ${ROOT_DICT_HEADERS} ${LINKDEF})
+
 set(INCLUDE_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/include
   $ENV{ROOT_INCLUDE_DIR}
@@ -17,10 +34,25 @@ set(LINK_DIRECTORIES
   $ENV{BOOST_ROOT}/lib
 )
 link_directories(${LINK_DIRECTORIES})
-set(LINK_LIBS MathMore PndData LmdTool)
 
-file(GLOB SRCS ./*.cxx)
+set(LINK_LIBS
+MathMore
+PndData
+LmdTool
+)
+
+set(SRCS
+PndLmdAbstractData.cxx
+PndLmdAcceptance.cxx
+PndLmdAngularData.cxx
+PndLmdCombinedDataReader.cxx
+PndLmdDataReader.cxx
+PndLmdFitDataBundle.cxx
+PndLmdHistogramData.cxx
+PndLmdSeperateDataReader.cxx
+${CMAKE_BINARY_DIR}/LmdFitDataDict.cxx
+)
 
 add_library(LmdFitData SHARED ${SRCS})
 
-target_link_libraries(LmdFitData ${LINK_LIBS})
+target_link_libraries(LmdFitData LINK_PRIVATE ${LINK_LIBS})
