--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,26 +6,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
 
 include_directories(./)
 
-set(ROOT_DICT_HEADERS
-fit/ModelFitResult.h
-fit/EstimatorOptions.h
-fit/PndLmdFitOptions.h 
-data/PndLmdFitStorage.h
-data/PndLmdFitDataBundle.h
-data/PndLmdAbstractData.h
-data/PndLmdHistogramData.h
-data/PndLmdAngularData.h
-data/PndLmdAcceptance.h
-LumiFitStructs.h
-)
-
-set(LINKDEF LinkDef.h)
-
-execute_process(COMMAND rootcint -f LmdFitDict.cxx -c -I$ENV{MODEL_FRAMEWORK}/include -I${CMAKE_SOURCE_DIR} ${ROOT_DICT_HEADERS} ${LINKDEF})
-
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 add_subdirectory(data)
 add_subdirectory(fit)
 add_subdirectory(model)
+add_subdirectory(ui)
 
 add_subdirectory(apps)
