--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -14,40 +14,64 @@ link_directories(${LINK_DIRECTORIES})
 
 
 
-########################### create phiSlicing app ##################################
+########################### create elastic cross section integrator app ##################################
 
-#add_executable(phiSliceData phiSliceData.cxx)
-#target_link_libraries(phiSliceData Lmd LmdTool MathMore Eve)
+add_executable(calculateElasticCrossSection calculateElasticCrossSection.cxx)
+target_link_libraries(calculateElasticCrossSection LmdUI)
 
-########################### create lumiFitData app ##################################
+########################### create checkFramework app ##################################
 
-add_executable(createLmdFitData createLmdFitData.cxx)
-target_link_libraries(createLmdFitData LmdFitData boost_regex)
-
-########################### create mergeLmdData app ##################################
-
-add_executable(mergeLmdData mergeLmdData.cxx)
-target_link_libraries(mergeLmdData LmdFit boost_regex)
-
-########################### create lumiFit app ##################################
-
-add_executable(runLmdFit runLmdFit.cxx)
-target_link_libraries(runLmdFit LmdFit)
-
-########################### create determineBeamOffset app ##################################
-
-add_executable(determineBeamOffset determineBeamOffset.cxx)
-target_link_libraries(determineBeamOffset LmdFit)
-
-########################### create lumiFitSystematic app ##################################
-
-add_executable(determineLumiFitSystematics determineLumiFitSystematics.cxx)
-target_link_libraries(determineLumiFitSystematics LmdFit boost_regex)
+add_executable(checkFramework checkFramework.cxx)
+target_link_libraries(checkFramework $ENV{ROOT_LIBRARIES} Model)
 
 ########################### create acceptanceComparison app ##################################
 
 add_executable(compareAcceptances compareAcceptances.cxx)
-target_link_libraries(compareAcceptances LmdFit)
+target_link_libraries(compareAcceptances LmdUI)
+
+########################### create lumiFitData app ##################################
+
+add_executable(createLmdFitData createLmdFitData.cxx)
+target_link_libraries(createLmdFitData LmdUI)
+
+########################### create determineBeamOffset app ##################################
+
+add_executable(determineBeamOffset determineBeamOffset.cxx)
+target_link_libraries(determineBeamOffset LmdUI)
+
+########################### create lumiFitSystematic app ##################################
+
+add_executable(determineLumiFitSystematics determineLumiFitSystematics.cxx)
+target_link_libraries(determineLumiFitSystematics LmdUI)
+
+########################### create mergeLmdData app ##################################
+
+add_executable(mergeLmdData mergeLmdData.cxx)
+target_link_libraries(mergeLmdData LmdUI)
+
+########################### create BeamOffsetResult plotter app ##################################
+
+add_executable(plotIPDistribution plotIPDistribution.cxx)
+target_link_libraries(plotIPDistribution LmdUI)
+
+########################### create LumiFit plotter app ##################################
+
+add_executable(plotLumiFitResults plotLumiFitResults.cxx)
+target_link_libraries(plotLumiFitResults LmdUI)
+
+########################### create lumiFit app ##################################
+
+add_executable(runLmdFit runLmdFit.cxx)
+target_link_libraries(runLmdFit LmdUI)
+
+
+
+
+
+########################### create phiSlicing app ##################################
+
+#add_executable(phiSliceData phiSliceData.cxx)
+#target_link_libraries(phiSliceData Lmd LmdTool MathMore Eve)
 
 ########################### create fitRawDPMElasticData app ##################################
 
@@ -59,39 +83,19 @@ target_link_libraries(compareAcceptances LmdFit)
 #add_executable(resolutionModelFitTesting1D resolutionModelFitTesting1D.cxx)
 #target_link_libraries(resolutionModelFitTesting1D LmdFit)
 
-########################### create checkFramework app ##################################
-
-add_executable(checkFramework checkFramework.cxx)
-target_link_libraries(checkFramework $ENV{ROOT_LIBRARIES} Model)
-
 ########################### create checkTilted2DDPMModel app ##################################
 
 #add_executable(checkTilted2DDPMModel checkTilted2DDPMModel.cxx)
 #target_link_libraries(checkTilted2DDPMModel $ENV{ROOT_LIBRARIES} LmdFit)
 
 ########################### create checkMCInfoTrackMatching app ##################################
-add_executable(checkMCInfoTrackMatching checkMCInfoTrackMatching.cxx)
-target_link_libraries(checkMCInfoTrackMatching ${LINK_LIBS})
-
-########################### create elastic cross section integrator app ##################################
-
-add_executable(calculateElasticCrossSection calculateElasticCrossSection.cxx)
-target_link_libraries(calculateElasticCrossSection LmdModel LmdFitData)
+#add_executable(checkMCInfoTrackMatching checkMCInfoTrackMatching.cxx)
+#target_link_libraries(checkMCInfoTrackMatching ${LINK_LIBS})
 
 ########################### create makeTalkPlots app ##################################
 
 #add_executable(makeTalkPlots makeTalkPlots.cxx)
 #target_link_libraries(makeTalkPlots LmdFit)
-
-########################### create BeamOffsetResult plotter app ##################################
-
-add_executable(plotIPDistribution plotIPDistribution.cxx)
-target_link_libraries(plotIPDistribution LmdFit)
-
-########################### create LumiFit plotter app ##################################
-
-add_executable(plotLumiFitResults plotLumiFitResults.cxx)
-target_link_libraries(plotLumiFitResults LmdFit)
 
 ########################### create lumi resolution plotter app ##################################
 
