--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -2,6 +2,7 @@ set(INCLUDE_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/include
   $ENV{ROOT_INCLUDE_DIR}
   $ENV{BOOST_ROOT}/include
+  $ENV{VALGRIND_ROOT}/include/valgrind
 )
 include_directories(${INCLUDE_DIRECTORIES})
 
@@ -10,6 +11,7 @@ set(LINK_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/lib
   $ENV{ROOT_LIBRARY_DIR}
   $ENV{BOOST_ROOT}/lib
+  $ENV{VALGRIND_ROOT}/lib/valgrind
 )
 
 link_directories(${LINK_DIRECTORIES})
