--- a/fitconfig.json
+++ b/fitconfig.json
@@ -21,10 +21,10 @@
          "fit_dimension": 2,
          "dpm_elastic_parts": "ALL",
 	     
-	     "divergence_smearing_active": true,
+	     "divergence_smearing_active": false,
 	     "fix_beam_divs": false,
-	     "beam_div_x": 0.0002,
-	     "beam_div_y": 0.0002,
+	     "beam_div_x": 0.0003,
+	     "beam_div_y": 0.0003,
 	     "elastic_data_input_directory": "",
 
 	     "fix_beam_tilts": false,
