--- a/vertex_fitconfig.json
+++ b/vertex_fitconfig.json
@@ -1,7 +1,7 @@
 {
    "fit":
    {	
-      "estimator_type": "LOG_LIKELIHOOD",
+      "estimator_type": "CHI2",
       
       "estimator_options":
       {
