--- a/fitconfig.json
+++ b/fitconfig.json
@@ -22,13 +22,13 @@
          "dpm_elastic_parts": "ALL",
          "theta_t_trafo_option": "APPROX",
 	     
-	     "divergence_smearing_active": false,
+	     "divergence_smearing_active": true,
 	     "fix_beam_divs": false,
 	     "beam_div_x": 0.0002,
 	     "beam_div_y": 0.0002,
 	     "elastic_data_input_directory": "",
 
-	     "fix_beam_tilts": true,
+	     "fix_beam_tilts": false,
 	     "beam_tilt_x": 0.0,
 	     "beam_tilt_y": 0.0,
 	     
