--- a/fitconfig.json
+++ b/fitconfig.json
@@ -8,12 +8,12 @@
         "with_integral_scaling": false,
         
         "fit_range_x_active": false,
-        "fit_range_x_low": -0.012,
-        "fit_range_x_high": 0.012,
+        "fit_range_x_low": 0.0025,
+        "fit_range_x_high": 0.0095,
         
         "fit_range_y_active": false,
-        "fit_range_y_low": -0.012,
-        "fit_range_y_high": 0.012
+        "fit_range_y_low": 0.0025,
+        "fit_range_y_high": 0.0095
       },
       
       "fit_model_options":
@@ -22,8 +22,10 @@
          "dpm_elastic_parts": "ALL",
          "theta_t_trafo_option": "APPROX",
 	     
-	     "divergence_smearing_active": true,
+	     "divergence_smearing_active": false,
 	     "fix_beam_divs": false,
+	     "beam_div_x": 0.0001,
+	     "beam_div_y": 0.0001,
 	     "elastic_data_input_directory": "",
 
 	     "fix_beam_tilts": false,
@@ -31,8 +33,6 @@
 	     "beam_tilt_y": 0.0,
 	     
 	     "fix_ip_offsets": true,
-	     "ip_offset_x": 0.0,
-	     "ip_offset_y": 0.0,
 
 	     "acceptance_correction_active": true,
 	     "acceptance_interpolation": "CONSTANT",
