stable version of divergence smearing fit. only useful for for low momentum cases though

--- a/fitconfig.json
+++ b/fitconfig.json
@@ -9,11 +9,11 @@
         
         "fit_range_x_active": false,
         "fit_range_x_low": 0.0025,
-        "fit_range_x_high": 0.0095,
+        "fit_range_x_high": 0.008,
         
         "fit_range_y_active": false,
         "fit_range_y_low": 0.0025,
-        "fit_range_y_high": 0.0095
+        "fit_range_y_high": 0.008
       },
       
       "fit_model_options":
@@ -22,7 +22,7 @@
          "dpm_elastic_parts": "ALL",
          "theta_t_trafo_option": "APPROX",
 	     
-	     "divergence_smearing_active": false,
+	     "divergence_smearing_active": true,
 	     "fix_beam_divs": false,
 	     "beam_div_x": 0.0001,
 	     "beam_div_y": 0.0001,
@@ -37,6 +37,7 @@
 	     "acceptance_correction_active": true,
 	     "acceptance_interpolation": "CONSTANT",
 	     "automatic_acceptance_boundary_finding_active": true,
+	     "automatic_acceptance_shifting_active": false,
 	     "acceptance_bound_low": 0.002,
 	     "acceptance_bound_high": 0.01,
 
