--- a/fitconfig.json
+++ b/fitconfig.json
@@ -22,10 +22,8 @@
          "dpm_elastic_parts": "ALL",
          "theta_t_trafo_option": "APPROX",
 	     
-	     "divergence_smearing_active": false,
-	     "fix_beam_divs": false,
-	     "beam_div_x": 0.0001,
-	     "beam_div_y": 0.0001,
+	     "divergence_smearing_active": true,
+	     "fix_beam_divs": true,
 	     "elastic_data_input_directory": "",
 
 	     "fix_beam_tilts": false,
