--- a/fit/CMakeLists.txt
+++ b/fit/CMakeLists.txt
@@ -1,15 +1,14 @@
 set(INCLUDE_DIRECTORIES
   ./
   $ENV{MODEL_FRAMEWORK}/include
-  $ENV{ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
   $ENV{BOOST_ROOT}/include
 )
 include_directories(${INCLUDE_DIRECTORIES})
 
-
 set(LINK_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/lib
-  $ENV{ROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
   $ENV{BOOST_ROOT}/lib
 )
 link_directories(${LINK_DIRECTORIES})
