--- a/model/CMakeLists.txt
+++ b/model/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(INCLUDE_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/include
-  $ENV{ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
   $ENV{BOOST_ROOT}/include
 )
 include_directories(${INCLUDE_DIRECTORIES})
@@ -8,7 +8,7 @@ include_directories(${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/lib
-  $ENV{ROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
   $ENV{BOOST_ROOT}/lib
 )
 
