--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -2,10 +2,6 @@ set(INCLUDE_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/include
   $ENV{ROOT_INCLUDE_DIR}
   $ENV{BOOST_ROOT}/include
-  $ENV{VALGRIND_ROOT}/include/valgrind
-  /home/pflueger/ceres-bin/include
-  /home/pflueger/ceres-bin/include/ceres/internal/miniglog
-  /home/pflueger/eigen-build/include/eigen3
 )
 include_directories(${INCLUDE_DIRECTORIES})
 
@@ -14,7 +10,6 @@ set(LINK_DIRECTORIES
   $ENV{MODEL_FRAMEWORK}/lib
   $ENV{ROOT_LIBRARY_DIR}
   $ENV{BOOST_ROOT}/lib
-  $ENV{VALGRIND_ROOT}/lib/valgrind
 )
 
 link_directories(${LINK_DIRECTORIES})
@@ -22,6 +17,7 @@ set(LINK_LIBS
 LmdFit
 LmdFitData
 LmdModel
+boost_regex
 )
 
 set(SRCS
