- fixed CMake scripts

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,21 +1,3 @@
-set(INCLUDE_DIRECTORIES
-  ${ROOT_INCLUDE_DIR}
-  $ENV{VMCWORKDIR}/detectors/lmd/LmdQA
-  $ENV{VMCWORKDIR}/pnddata
-  $ENV{VMCWORKDIR}/pnddata/SdsData
-  $ENV{VMCWORKDIR}/pnddata/TrackData
-  $ENV{FAIRROOTPATH}/include
-  $ENV{BOOST_ROOT}/include
-)
-include_directories(${INCLUDE_DIRECTORIES})
-
-set(LINK_DIRECTORIES
-  ${ROOT_LIBRARY_DIR}
-  $ENV{FAIRLIBDIR}
-  $ENV{BOOST_ROOT}/lib
-)
-link_directories(${LINK_DIRECTORIES})
-
 set(ROOT_DICT_HEADERS
 data/PndLmdFitDataBundle.h
 data/PndLmdAbstractData.h
@@ -26,11 +8,8 @@ data/PndLmdMapData.h
 LumiFitStructs.h
 )
 
-set(LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h)
-
-message(STATUS "Generating root dictionary for data objects...")
-execute_process(COMMAND rootcling -f LmdFitDataDict.cxx -I${CMAKE_SOURCE_DIR}/model_framework -I${CMAKE_SOURCE_DIR} ${ROOT_DICT_HEADERS} ${LINKDEF})
-message(STATUS "done!")
+set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/model_framework ${CMAKE_SOURCE_DIR})
+ROOT_GENERATE_DICTIONARY(LmdFitDataDict ${ROOT_DICT_HEADERS} LINKDEF LinkDef.h)
 
 set(SRCS
 PndLmdAbstractData.cxx
@@ -42,18 +21,36 @@ PndLmdDataReader.cxx
 PndLmdFitDataBundle.cxx
 PndLmdHistogramData.cxx
 PndLmdSeperateDataReader.cxx
-${CMAKE_BINARY_DIR}/LmdFitDataDict.cxx
 )
 
-add_library(LmdFitData SHARED ${SRCS})
+add_library(LmdFitData SHARED ${SRCS} LmdFitDataDict.cxx)
 
-target_link_libraries(LmdFitData 
-	INTERFACE MathMore LmdFit
+add_library(PndData SHARED IMPORTED)
+set_target_properties(PndData PROPERTIES
+            IMPORTED_LINK_INTERFACE_LANGUAGES "CXX"
+            IMPORTED_LOCATION "$ENV{FAIRLIBDIR}/libPndData.so")
+add_library(LmdTool SHARED IMPORTED)
+set_target_properties(LmdTool PROPERTIES
+            IMPORTED_LINK_INTERFACE_LANGUAGES "CXX"
+            IMPORTED_LOCATION "$ENV{FAIRLIBDIR}/libLmdTool.so")
+
+target_include_directories(LmdFitData
+	PUBLIC ${ROOT_INCLUDE_DIR}
+	PRIVATE $ENV{VMCWORKDIR}/detectors/lmd/LmdQA
+		$ENV{VMCWORKDIR}/pnddata
+		$ENV{VMCWORKDIR}/pnddata/SdsData
+		$ENV{VMCWORKDIR}/pnddata/TrackData
+		$ENV{FAIRROOTPATH}/include
+)
+target_link_libraries(LmdFitData
+	PUBLIC ROOT::Core ROOT::RIO
 	PRIVATE PndData LmdTool)
 
-add_custom_command(TARGET LmdFitData 
-		   POST_BUILD 
-		   COMMAND rootcling -f LmdFitDataDict.cxx -rml ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libLmdFitData.so -rmf ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libLmdFitData.rootmap -I${CMAKE_SOURCE_DIR}/model_framework -I${CMAKE_SOURCE_DIR} ${ROOT_DICT_HEADERS} ${LINKDEF}
+
+add_custom_command(TARGET LmdFitData
+		   POST_BUILD
+		   COMMAND cp LmdFitDataDict.cxx LmdFitDataDict-copy.cxx
+		   COMMAND rootcling -f LmdFitDataDict-copy.cxx -rml libLmdFitData.so -rmf libLmdFitData.rootmap -I${CMAKE_SOURCE_DIR}/model_framework -I${CMAKE_SOURCE_DIR} ${ROOT_DICT_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h
+ 		   COMMAND rm LmdFitDataDict-copy.cxx
  		   COMMENT "Generating root map..."
-                
 		  )
