- now copying rootmap and root pcm files to lib directory - fixed data readers to open TTrees with name pndsim instead of cbmsim - fixed bug in createLmdFitData reader when not using the filepath flag -f - introduced misalignment by transforming reco data points.   Also modified simulation scripts to correctly handle misalignment

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -43,14 +43,19 @@ target_include_directories(LmdFitData
 		$ENV{FAIRROOTPATH}/include
 )
 target_link_libraries(LmdFitData
-	PUBLIC ROOT::Core ROOT::RIO
-	PRIVATE PndData LmdTool)
+	PUBLIC LmdFit ROOT::Core ROOT::RIO
+	PRIVATE PndData LmdTool 
+)
 
 
 add_custom_command(TARGET LmdFitData
 		   POST_BUILD
 		   COMMAND cp LmdFitDataDict.cxx LmdFitDataDict-copy.cxx
 		   COMMAND rootcling -f LmdFitDataDict-copy.cxx -rml libLmdFitData.so -rmf libLmdFitData.rootmap -I${CMAKE_SOURCE_DIR}/model_framework -I${CMAKE_SOURCE_DIR} ${ROOT_DICT_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h
- 		   COMMAND rm LmdFitDataDict-copy.cxx
+ 		   COMMAND rm LmdFitDataDict-copy.cxx LmdFitDataDict-copy_rdict.pcm
+ 		   COMMAND cp libLmdFitData.rootmap ${CMAKE_BINARY_DIR}/lib/.
+ 		   COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_CURRENT_BINARY_DIR}/LmdFitDataDict_rdict.pcm
+                ${CMAKE_BINARY_DIR}/lib/.
  		   COMMENT "Generating root map..."
-		  )
+)
