--- a/model/CMakeLists.txt
+++ b/model/CMakeLists.txt
@@ -29,6 +29,6 @@ target_include_directories(LmdModel
 	PRIVATE ${ROOT_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
 target_link_libraries(LmdModel 
 	PUBLIC Model
-	PRIVATE Boost::thread ${ROOT_LIBRARIES} pthread
-	INTERFACE LmdFitData LmdUI
+	PRIVATE LmdUI Boost::thread ${ROOT_LIBRARIES} pthread
+	INTERFACE LmdFitData
 )
