Fixed small luminosity uncertainty problem
- With the new geometry and simulations non-zero efficiencies below 3 mrad
  may appear. Several filtering steps try to remove these.
- Fixed bug where fit range was not used when running in multi-threading
  mode.
- Also fixed multi-threading code.

--- a/fitconfig-fast.json
+++ b/fitconfig-fast.json
@@ -37,7 +37,7 @@
 	     "acceptance_correction_active": true,
 	     "acceptance_interpolation": "CONSTANT",
 	     "automatic_acceptance_shifting_active": false,
-	     "override_lower_acceptance_bound": 0.002,
+	     "clean_lower_acceptance": true,
 
 	     "resolution_smearing_active": true,
 	     
