Changed default estimator for vertex fits
The default estimator for vertex fits is now LogLikelihood, because of
higher fit stability.

--- a/vertex_fitconfig.json
+++ b/vertex_fitconfig.json
@@ -1,7 +1,7 @@
 {
    "fit":
    {	
-      "estimator_type": "CHI2",
+      "estimator_type": "LOG_LIKELIHOOD",
       
       "estimator_options":
       {
