--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -16,37 +16,18 @@ PndLmdAbstractData.cxx
 PndLmdAcceptance.cxx
 PndLmdAngularData.cxx
 PndLmdMapData.cxx
-PndLmdCombinedDataReader.cxx
-PndLmdDataReader.cxx
 PndLmdFitDataBundle.cxx
 PndLmdHistogramData.cxx
-PndLmdSeperateDataReader.cxx
 )
 
 add_library(LmdFitData SHARED ${SRCS} LmdFitDataDict.cxx)
 
-add_library(PndData SHARED IMPORTED)
-set_target_properties(PndData PROPERTIES
-            IMPORTED_LINK_INTERFACE_LANGUAGES "CXX"
-            IMPORTED_LOCATION "$ENV{FAIRLIBDIR}/libPndData.so")
-add_library(LmdTool SHARED IMPORTED)
-set_target_properties(LmdTool PROPERTIES
-            IMPORTED_LINK_INTERFACE_LANGUAGES "CXX"
-            IMPORTED_LOCATION "$ENV{FAIRLIBDIR}/libLmdTool.so")
-
 target_include_directories(LmdFitData
 	PUBLIC ${ROOT_INCLUDE_DIR}
-	PRIVATE $ENV{VMCWORKDIR}/detectors/lmd/LmdQA
-		$ENV{VMCWORKDIR}/pnddata
-		$ENV{VMCWORKDIR}/pnddata/SdsData
-		$ENV{VMCWORKDIR}/pnddata/TrackData
-		$ENV{FAIRROOTPATH}/include
 )
 target_link_libraries(LmdFitData
-	PUBLIC LmdFit ROOT::Core ROOT::RIO
-	PRIVATE PndData LmdTool 
+	PUBLIC LmdFit ROOT::Core ROOT::RIO ROOT::Tree
 )
-
 
 add_custom_command(TARGET LmdFitData
 		   POST_BUILD
@@ -59,3 +40,22 @@ add_custom_command(TARGET LmdFitData
                 ${CMAKE_BINARY_DIR}/lib/.
  		   COMMENT "Generating root map..."
 )
+
+if (PANDAROOT_FOUND)
+	set(SRCS
+		PndLmdDataReader.cxx
+		PndLmdCombinedDataReader.cxx
+		PndLmdSeperateDataReader.cxx
+	)
+	add_library(LmdFitPandaDataIO SHARED ${SRCS})
+	target_link_libraries(LmdFitPandaDataIO
+		PUBLIC ROOT::RIO
+		PRIVATE PndData LmdTool 
+	)
+else()
+	message(STATUS "No PANDAROOT environment found! Not building PANDA Data reader library.")
+endif()
+
+
+
+
